--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,34 +6,41 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-header{
-  background-color: #404040;
-  padding: 1rem;
+.site-container {
+  min-height: 100vh;
 }
-header a{
-  color:#ffffff;
-  font-weight: bold;
-  text-decoration: none;
+main {
+  flex: 1;
 }
-main{
-  padding:1rem;
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
 }
-.products{
+.products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
 }
-.product{
-  border:1px #404040 solid;
+.product {
+  border: 1px #404040 solid;
   margin: 1rem;
-
 }
-.product img{
-  width:100%;
-  max-width: 300px;
+.rating span {
+  color: #ffc000;
 }
-.product-info{
+.rating span:last-child {
+  color: black;
+}
+.product img {
+  width: 100%;
+  max-width: 400px;
+}
+.product-info {
   padding: 1rem;
+}
+.img-large {
+  max-width: 100%;
+}
+.img-thumbnail {
+  height: 80px;
 }
