--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@ main {
 }
 .product {
   border: 1px #404040 solid;
-  margin: 1rem;
+  margin: 0.1rem;
 }
 .rating span {
   color: #ffc000;
@@ -43,4 +43,7 @@ main {
 }
 .img-thumbnail {
   height: 80px;
+}
+.small-container{
+  max-width: 600px;
 }
